--- a/people/aabeykoon.html
+++ b/people/aabeykoon.html
@@ -92,7 +92,7 @@
         <div id="content">
           
 <h1>Physicist</h1>
-<img src="https://www.bnl.gov/assets/global/images/render.php?q=0|24383.jpg|500" style="width:200px;height:200px;"/>
+<img src="https://www.bnl.gov/assets/global/images/render.php?q=0|24383.jpg|500" style="width:200px"/>
 <p>bio</p>
 
 
