--- a/people/sbillinge.html
+++ b/people/sbillinge.html
@@ -1046,6 +1046,46 @@ Prof. Billinge has published more than 300 papers in scholarly journals. He is a
        present
     </i></li>
   
+    <li><b>gra:</b><i>
+       2021 - 
+       2022
+    </i></li>
+  
+    <li><b>gra:</b><i>
+       2022 - 
+       present
+    </i></li>
+  
+    <li><b>Mentor:</b><i>
+       2021 - 
+       present
+    </i></li>
+  
+    <li><b>postdoc:</b><i>
+       2021 - 
+       present
+    </i></li>
+  
+    <li><b>ug:</b><i>
+       2021 - 
+       present
+    </i></li>
+  
+    <li><b>ug:</b><i>
+       2021 - 
+       2021
+    </i></li>
+  
+    <li><b>ug:</b><i>
+       2021 - 
+       2021
+    </i></li>
+  
+    <li><b>gra:</b><i>
+       2021 - 
+       present
+    </i></li>
+  
     <li><b>Mentor:</b><i>
        2021 - 
        present
@@ -1460,6 +1500,26 @@ Prof. Billinge has published more than 300 papers in scholarly journals. He is a
   
     <li><b>lead developer:</b><i>
        2019 - 
+       present
+    </i></li>
+  
+    <li><b>developer:</b><i>
+       2019 - 
+       present
+    </i></li>
+  
+    <li><b>developer:</b><i>
+       2019 - 
+       present
+    </i></li>
+  
+    <li><b>lead developer:</b><i>
+       2019 - 
+       present
+    </i></li>
+  
+    <li><b>mentor:</b><i>
+       2016 - 
        present
     </i></li>
   
