Update from https://github.com/Billingegroup/rg-db-public/commit/9d77ddfd6d99b178eee0c70128c0fb26be03837d

--- a/people/bfrandsen.html
+++ b/people/bfrandsen.html
@@ -151,6 +151,37 @@
   <li>
   
   
+    <b>Benjamin A. Frandsen</b>,
+  
+    Parker K. Hamilton,
+  
+    Jacob A. Christensen,
+  
+    Eric Stubbena,
+  
+  
+    and
+  
+  
+  Simon J. L. Billinge.
+  <i>"DIFFPY.MPDF: Open-source software for magnetic pair distribution function analysis".</i>
+  
+  J. Appl. Crystallography
+  .
+  
+  
+  
+  
+    Tbd 2022
+  
+  
+  <a href="">download</a>
+  <a href="">doi</a>
+  </li>
+
+  <li>
+  
+  
     Simon J. L. Billinge,
   
     Sandra H. Skjaervoe,
