--- a/people/chliu.html
+++ b/people/chliu.html
@@ -549,6 +549,27 @@
   <li>
   
   
+  
+  
+  <b>Chia-Hao Liu</b>.
+  <i>"Development of small-angle scattering pair distribution function analysis techniques and application to polymer-grafted nanoparticles (GNPs)".</i>
+  
+  
+  .
+  
+  
+  
+  
+    Jan 2020
+  
+  
+  
+  
+  </li>
+
+  <li>
+  
+  
     <b>Liu, Chia-Hao</b>,
   
     Tao, Yunzhe,
