--- a/people/sbillinge.html
+++ b/people/sbillinge.html
@@ -102,7 +102,7 @@ Prof. Billinge has published more than 300 papers in scholarly journals. He is a
 <h1><a href="#honors">Honors</a></h1>
 
   <h3>Distinguished Powder Diffractionist Prize of the European Powder Diffraction Conference</h3>
-   2020
+   2022
   
   <br/><br/>
 
@@ -1046,46 +1046,6 @@ Prof. Billinge has published more than 300 papers in scholarly journals. He is a
        present
     </i></li>
   
-    <li><b>gra:</b><i>
-       2021 - 
-       2022
-    </i></li>
-  
-    <li><b>gra:</b><i>
-       2022 - 
-       present
-    </i></li>
-  
-    <li><b>Mentor:</b><i>
-       2021 - 
-       present
-    </i></li>
-  
-    <li><b>postdoc:</b><i>
-       2021 - 
-       present
-    </i></li>
-  
-    <li><b>ug:</b><i>
-       2021 - 
-       present
-    </i></li>
-  
-    <li><b>ug:</b><i>
-       2021 - 
-       2021
-    </i></li>
-  
-    <li><b>ug:</b><i>
-       2021 - 
-       2021
-    </i></li>
-  
-    <li><b>gra:</b><i>
-       2021 - 
-       present
-    </i></li>
-  
     <li><b>Mentor:</b><i>
        2021 - 
        present
@@ -1503,26 +1463,6 @@ Prof. Billinge has published more than 300 papers in scholarly journals. He is a
        present
     </i></li>
   
-    <li><b>developer:</b><i>
-       2019 - 
-       present
-    </i></li>
-  
-    <li><b>developer:</b><i>
-       2019 - 
-       present
-    </i></li>
-  
-    <li><b>lead developer:</b><i>
-       2019 - 
-       present
-    </i></li>
-  
-    <li><b>mentor:</b><i>
-       2016 - 
-       present
-    </i></li>
-  
     <li><b>mentor:</b><i>
        2016 - 
        present
@@ -1622,6 +1562,37 @@ Prof. Billinge has published more than 300 papers in scholarly journals. He is a
   <i>"Controlling desolvation through polymer-assisted grinding".</i>
   
   crystEngComm
+  .
+  
+  
+  
+  
+    Tbd 2022
+  
+  
+  <a href="">download</a>
+  <a href="">doi</a>
+  </li>
+
+  <li>
+  
+  
+    Benjamin A. Frandsen,
+  
+    Parker K. Hamilton,
+  
+    Jacob A. Christensen,
+  
+    Eric Stubbena,
+  
+  
+    and
+  
+  
+  <b>Simon J. L. Billinge</b>.
+  <i>"DIFFPY.MPDF: Open-source software for magnetic pair distribution function analysis".</i>
+  
+  J. Appl. Crystallography
   .
   
   
