Update from https://github.com/Billingegroup/rg-db-public/commit/abb59c4eb28e471614053c61b74f2476b09e88c7

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ The Billinge Group is involved in a large number of computational and experiment
   </a>
   <h3><a href="../../../../people/sfrank.html"> Sara Frank</a></h3>
   <ul>
-    <li><b>Position:</b> Visiting researcher, u copenhagen</li>
+    <li><b>Position:</b> Visiting researcher, u. aarhus</li>
   </ul>
 
   <a href="../../../../people/jgriffiths.html" class="image-link">
