--- a/people/index.html
+++ b/people/index.html
@@ -149,7 +149,7 @@
   </a>
   <h1><a href="../../../../../people/sfrank.html"> Sara Frank</a></h1>
   <ul>
-    <li><b>Position:</b> Visiting Researcher, U Copenhagen</li>
+    <li><b>Position:</b> Visiting Researcher, U. Aarhus</li>
   </ul><a href="../../../../../people/jgriffiths.html" class="image-link">
     <img src="https://github.com/j-griffo.png" style="width:200px"/>
   </a>
